// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 hrhkGQ"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 isKstA"
    id="Field"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
      color={null}
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
      onClick={null}
    >
      Field Name
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      Field Value
    </p>
  </section>
  <div />
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 hrhkGQ"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq Field__FieldGrid-sc-11od8ug-5 kzIWqC"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 isKstA"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        Default
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 cTIowo"
      id="Edge-Aligned"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        Edge-Aligned
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 gHWRdT"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 ddZSbO"
      id="Vertically-Aligned"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        Vertically-Aligned
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 hrhkGQ"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq Field__FieldGrid-sc-11od8ug-5 kzIWqC"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 isKstA"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        Field Label
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 fNdZbj"
      id="2x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        Field Label (2x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 gVApvo"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        Field Label (3x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 cJlYYe"
      id="4x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        Field Label (4x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 hrhkGQ"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq Field__FieldGrid-sc-11od8ug-5 kzIWqC"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 jeNqol"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        Small Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 isKstA"
      id="2x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        Default Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 eyCMFE"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        Large Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 dPaFQM"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        XL Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Field__FieldItem-sc-11od8ug-0 fUVnJH"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 btVuKb Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        color={null}
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
        onClick={null}
      >
        2XL Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;
